--- a/css/solutions.css
+++ b/css/solutions.css
@@ -16,3 +16,21 @@
 .ex-2-square:active {
   width: 100%;
 }
+
+/* Exercise 3 */
+.ex-3-square {
+  transition: border-radius 1s;
+}
+
+.ex-3-square:hover {
+  border-radius: 50%;
+}
+
+/*Exercise 3*/
+.ex-4-square {
+  transition: opacity 2s;
+}
+
+.ex-4-square:hover {
+  opacity: 0;
+}
