--- a/css/solutions.css
+++ b/css/solutions.css
@@ -34,3 +34,16 @@
 .ex-4-square:hover {
   opacity: 0;
 }
+
+/* Exercise 5 */
+.ex-5-square {
+  transition: transform 2s;
+}
+
+.ex-5-square:hover {
+  transform: scale(2);
+}
+
+.ex-5-square:active {
+  transform: scale(0.5);
+}
