--- a/css/solutions.css
+++ b/css/solutions.css
@@ -47,3 +47,17 @@
 .ex-5-square:active {
   transform: scale(0.5);
 }
+
+/* Exercise 6 */
+.ex-6-img:hover {
+  filter: grayscale(1);
+}
+
+/* Exercise 7*/
+.ex-7-img {
+  transition: filter 2s;
+}
+
+.ex-7-img:hover {
+  filter: sepia(0.5) grayscale(0.5);
+}
