--- a/css/solutions.css
+++ b/css/solutions.css
@@ -61,3 +61,25 @@
 .ex-7-img:hover {
   filter: sepia(0.5) grayscale(0.5);
 }
+
+/* Exercise 8 */
+.ex-8-img {
+  transition: all 2s;
+}
+
+.ex-8-img:hover {
+  border-radius: 20px;
+  filter: sepia(0.5) grayscale(0.5);
+}
+
+/* Exercise 9 */
+.ex-9-img {
+  transition: all 2s;
+}
+
+.ex-9-img:hover {
+  transform: scale(1.5);
+  border-radius: 20px;
+  filter: sepia(0.5) grayscale(0.5);
+  max-width: 100%;
+}
