--- a/css/solutions.css
+++ b/css/solutions.css
@@ -103,7 +103,7 @@
   }
 }
 
-/* Exercise 12 */
+/* Exercise 11 */
 .ex-11-icon:hover {
   animation-name: loading-effect-2;
   animation-duration: 2s;
@@ -125,7 +125,7 @@
   }
 }
 
-/* Exercise 13 */
+/* Exercise 12 */
 .ex-12-button:hover .ex-12-top-white {
   animation-name: top-move;
   animation-duration: 1s;
@@ -165,5 +165,57 @@
 
   100% {
     right: 20%;
+  }
+}
+
+/* Exercise 13 */
+.ex-13-top-white {
+  background-color: red;
+}
+
+.ex-13-button:hover .ex-13-top-white {
+  background-color: red;
+  animation-name: top-around;
+  animation-duration: 4s;
+  animation-iteration-count: 1;
+  animation-timing-function: linear;
+}
+
+.ex-13-button:hover .ex-13-bottom-white {
+  animation-name: bottom-around;
+  animation-duration: 2s;
+  animation-iteration-count: 1;
+  animation-timing-function: linear;
+}
+
+@keyframes top-around {
+  0% {
+    left: 10%;
+    top: -10px;
+  }
+
+  25% {
+    left: calc(100% - 30px);
+    top: -10px;
+  }
+
+  50% {
+    left: calc(100% - 30px);
+    top: calc(100% - 10px);
+  }
+
+  75% {
+    left: -30px;
+    top: calc(100% - 10px);
+  }
+
+  90% {
+    left: -30px;
+    top: -10px;
+  }
+
+  100% {
+    left: 10%;
+    top: -10px;
   }
 }
