--- a/css/solutions.css
+++ b/css/solutions.css
@@ -169,14 +169,9 @@
 }
 
 /* Exercise 13 */
-.ex-13-top-white {
-  background-color: red;
-}
-
 .ex-13-button:hover .ex-13-top-white {
-  background-color: red;
   animation-name: top-around;
-  animation-duration: 4s;
+  animation-duration: 2s;
   animation-iteration-count: 1;
   animation-timing-function: linear;
 }
@@ -217,5 +212,37 @@
   100% {
     left: 10%;
     top: -10px;
+  }
+}
+
+@keyframes bottom-around {
+  0% {
+    right: 20%;
+    bottom: -10px;
+  }
+
+  25% {
+    right: calc(100% - 30px);
+    bottom: -10px;
+  }
+
+  50% {
+    right: calc(100% - 30px);
+    bottom: calc(100% - 10px);
+  }
+
+  75% {
+    right: -30px;
+    bottom: calc(100% - 10px);
+  }
+
+  90% {
+    right: -30px;
+    bottom: -10px;
+  }
+
+  100% {
+    right: 20%;
+    bottom: -10px;
   }
 }
